1.5/_sources/modules/generated/sklearn.decomposition.IncrementalPCA.rst.txt
IncrementalPCA
==============

.. currentmodule:: sklearn.decomposition

.. autoclass:: IncrementalPCA
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.decomposition.IncrementalPCA sklearn.decomposition.IncrementalPCA.__init__ sklearn.decomposition.IncrementalPCA.fit sklearn.decomposition.IncrementalPCA.fit_transform sklearn.decomposition.IncrementalPCA.get_covariance sklearn.decomposition.IncrementalPCA.get_feature_names_out sklearn.decomposition.IncrementalPCA.get_metadata_routing sklearn.decomposition.IncrementalPCA.get_params sklearn.decomposition.IncrementalPCA.get_precision sklearn.decomposition.IncrementalPCA.inverse_transform sklearn.decomposition.IncrementalPCA.partial_fit sklearn.decomposition.IncrementalPCA.set_output sklearn.decomposition.IncrementalPCA.set_params sklearn.decomposition.IncrementalPCA.set_partial_fit_request sklearn.decomposition.IncrementalPCA.transform 
   :add-heading: Gallery examples
   :heading-level: -